# posta-engine

./: .gitignore  CMakeLists.txt  README.md  build.py  debug.py  export_project.py  generate_project.py  make_class.py  make_shader.py  run.py
blender-addon/: blender_script_to_get_dot_bones.py  posta-addon.py
docs/: Doxyfile  index.html  index.php
docs/autogenerated/html/: _app_8cpp.html  _app_8cpp__incl.dot  _app_8cpp_source.html  _app_8h.html  _app_8h.js  _app_8h__incl.dot  _app_8h_source.html  _assets_8cpp.html  _assets_8cpp__incl.dot  _assets_8cpp_source.html  _assets_8h.html  _assets_8h.js  _assets_8h__incl.dot  _assets_8h_source.html  _box_rigidbody_8cpp.html  _box_rigidbody_8cpp_source.html  _box_rigidbody_8h.html  _box_rigidbody_8h.js  _box_rigidbody_8h__incl.dot  _box_rigidbody_8h_source.html  _button_8cpp.html  _button_8cpp__incl.dot  (+809 more)
docs/guide/: index.html
examples/old/shadow_test/: CMakeLists.txt
examples/old/shadow_test/assets/shaders/Shadow/: fragment.glsl  vertex.glsl
examples/old/shadow_test/src/: App.cpp
examples/old/shooter/: CMakeLists.txt
examples/old/shooter/assets/: conexion.txt
examples/old/shooter/assets/animations (mal)/: body.bones
examples/old/shooter/assets/maps/0/: info.config
examples/old/shooter/assets/maps/1/: info.config
examples/old/shooter/assets/player/___fpv/: Idle1.ozz  Reload1.ozz  arms.bones  arms.gltf  skeleton.ozz
examples/old/shooter/assets/player/__fpv/: Idle1.ozz  Ignore.ozz  Reload1.ozz  Test.ozz  arms.bones  arms.gltf  skeleton.ozz
examples/old/shooter/assets/player/_fpv/: Idle1.ozz  Reload1.ozz  Test.ozz  arms.bones  arms.gltf  skeleton.ozz
examples/old/shooter/assets/player/fpv/: Idle1.ozz  Reload1.ozz  arms.bones  arms.gltf  skeleton.ozz
examples/old/shooter/assets/player/tpv/: Idle.ozz  MoviendoBrazos.ozz  MovienoPatas.ozz  RestAnimation.ozz  Walk.ozz  animation.gltf  body.bones  skeleton.ozz
examples/old/shooter/assets/scripts/: draw.lua  init.lua  script.lua
examples/old/shooter/assets/test/: anim2.anm  rest.anmr  skeleton.skl  test.bones
examples/old/shooter/assets/test/1/: anim2.anm  rest.anmr  restando.anm  skeleton.skl
examples/old/shooter/assets/test/2/: anim1.anm  restando.anm
examples/old/shooter/assets/test/3/: anim1.anm  anim2.anm  rest.anmr  skeleton.skl  test.bones
examples/old/shooter/assets/unale/: it.anm  rest.anmr  skeleton.skl  unale.bones
examples/old/shooter/include/: Mapa.h  Meat.h  PackagesTypes.h  Player.h  Text.h  Weapon.h  WeaponItem.h  _BasicShader.h  _ConfigFile.h  _Connection.h  _ConnectionOfServer.h  _ConnectionToClient.h  _ConnectionToServer.h  _Image.h  _NetworkPackage.h
examples/old/shooter/src/: Mapa.cpp  Meat.cpp  Player.cpp  Text.cpp  Weapon.cpp  WeaponItem.cpp  _ConfigFile.cpp  _Connection.cpp  _ConnectionOfServer.cpp  _ConnectionToClient.cpp  _ConnectionToServer.cpp  _Image.cpp  _NetworkPackage.cpp  main.cpp  tags
fixes/: common-problems.txt
libs/: CMakeLists.txt
libs/engine/: blender_script_to_get_dot_bones.py
libs/engine/include/: App.h
libs/engine/include/Component/: Camera.h  Image.h  MeshStaticRigidbody.h  Rigidbody.h  Skeleton.h  SmoothStaticMesh.h  SphereRigidbody.h  StaticMesh.h  Texture.h  Transform.h
libs/engine/include/Entity/: Camera.h  Entity.h
libs/engine/include/LuaAPI/: LuaAPI.h
libs/engine/include/UI/: Button.h  Rect.h  Textbox.h
libs/engine/include/Util/: Assets.h  Framebuffer.h  General.h  Mesh.h  NetworkPackage.h  ResourceBag.h  Shader.h  Sound.h  TCPConnToClient.h  TCPConnToServer.h  Thread.h  span.h
libs/engine/src/: App.cpp
libs/engine/src/Component/: BoxRigidbody.cpp  Camera.cpp  CapsuleRigidbody.cpp  Image.cpp  MeshStaticRigidbody.cpp  PlaneRigidbody.cpp  Rigidbody.cpp  Skeleton.cpp  SmoothStaticMesh.cpp  SphereRigidbody.cpp  StaticMesh.cpp  Texture.cpp  Transform.cpp
libs/engine/src/Entity/: Camera.cpp
libs/engine/src/LuaAPI/: LuaState - Copy.cpp
libs/engine/src/UI/: Button.cpp  Textbox.cpp
libs/engine/src/Util/: Assets.cpp  ConfigFile.cpp  Font.cpp  Framebuffer.cpp  General.cpp  Mesh.cpp  ResourceBag.cpp  Shader.cpp  TCPConnToClient.cpp  TCPConnToServer.cpp
libs/include/posta/: App.h
libs/include/posta/Component/: BoxRigidbody.h  Camera.h  CapsuleRigidbody.h  Constraint.h  CylinderRigidbody.h  DrawableMesh.h  HingeConstraint.h  Image.h  MeshStaticRigidbody.h  PlaneRigidbody.h  Rigidbody.h  Skeleton.h  SmoothStaticMesh.h  SphereRigidbody.h  StaticMesh.h  Texture.h  Transform.h
libs/include/posta/Entity/: Camera.h  Entity.h
libs/include/posta/LuaAPI/: LuaAPI.h  LuaState.h
libs/include/posta/Network/: NetworkPackage.h  TCPConn.h  TCPConnOfServer.h  TCPConnToClient.h  TCPConnToServer.h
libs/include/posta/UI/: Button.h  Checkbox.h  Rect.h  Textbox.h
libs/include/posta/Util/: Assets.h  ConfigFile.h  EventEmitter.h  Font.h  Framebuffer.h  General.h  Logging.h  LoggingMacro.h  Mesh.h  NetworkPackage.h  ResourceBag.h  Scene.h  Shader.h  Sound.h  TCPConn.h  TCPConnOfServer.h  TCPConnToClient.h  TCPConnToServer.h  Thread.h  span.h
libs/src/: replace_engine.py  replace_posta.py
libs/src/posta/: App.cpp
libs/src/posta/Component/: BoxRigidbody.cpp  Camera.cpp  CapsuleRigidbody.cpp  Constraint.cpp  CylinderRigidbody.cpp  HingeConstraint.cpp  Image.cpp  MeshStaticRigidbody.cpp  PlaneRigidbody.cpp  Rigidbody.cpp  Skeleton.cpp  SmoothStaticMesh.cpp  SphereRigidbody.cpp  StaticMesh.cpp  Texture.cpp  Transform.cpp
libs/src/posta/Entity/: Camera.cpp  Entity.cpp
libs/src/posta/LuaAPI/: LuaAPI.cpp  LuaState.cpp
libs/src/posta/Network/: NetworkPackage.cpp  TCPConn.cpp  TCPConnOfServer.cpp  TCPConnToClient.cpp  TCPConnToServer.cpp
libs/src/posta/UI/: Button.cpp  Rect.cpp  Textbox.cpp
libs/src/posta/Util/: Assets.cpp  ConfigFile.cpp  EventEmitter.cpp  Font.cpp  Framebuffer.cpp  General.cpp  Mesh.cpp  NetworkPackage.cpp  ResourceBag.cpp  Shader.cpp  Sound.cpp  TCPConn.cpp  TCPConnOfServer.cpp  TCPConnToClient.cpp  TCPConnToServer.cpp
template/: CMakeLists.txt  sources.cmake
template/include/: App.h  Game.h  MainScene.h
template/src/: App.cpp  Game.cpp  MainScene.cpp  _main.cpp  main.cpp
(+438 files in other folders)
