cmake_minimum_required(VERSION 3.16)

project(Posta VERSION 1.0.0)

set(POSTA_LIBRARIES_PATHS ${CMAKE_PREFIX_PATH}/../../bin)
set(POSTA_INCLUDE_PATHS ${CMAKE_PREFIX_PATH}/../../include)

#set(ZLIB_LIBRARY ${POSTA_LIBRARIES_PATHS})
#set(ZLIB_INCLUDE_DIR ${POSTA_INCLUDE_PATHS})
#set(PNG_LIBRARY ${POSTA_LIBRARIES_PATHS})
#set(PNG_INCLUDE_DIR ${POSTA_INCLUDE_PATHS})
#set(PNG_PNG_INCLUDE_DIR ${POSTA_INCLUDE_PATHS})
#set(LUA_LIBRARY ${POSTA_LIBRARIES_PATHS})
#set(LUA_INCLUDE_DIR ${POSTA_INCLUDE_PATHS})


add_subdirectory(libs)
add_subdirectory(apps)

